--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/highlight.js/styles/github-dark.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -44,8 +45,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2mb",
+                  "maximumError": "9mb"
                 },
                 {
                   "type": "anyComponentStyle",
